# SZE-MOSZE-2020-Merida_dualthrust

./: .gitignore  Adventurer.cpp  Adventurer.h  Adventurer_8h.html  Adventurer_8h__incl.map  Adventurer_8h__incl.md5  Adventurer_8h_source.html  Blood_Raven.json  Character.cpp  Character.h  CharacterSvgRenderer.cpp  CharacterSvgRenderer.h  CharacterSvgRenderer_8h_source.html  Character_8h.html  Character_8h__dep__incl.map  Character_8h__dep__incl.md5  Character_8h__incl.map  Character_8h__incl.md5  Character_8h_source.html  Damage.cpp  Damage.h  Damage_8h.html  Damage_8h__dep__incl.map  Damage_8h__dep__incl.md5  Damage_8h__incl.map  Damage_8h__incl.md5  Damage_8h_source.html  Dark_Wanderer.json  Fallen.json  Game.cpp  Game.h  Game_8h.html  Game_8h__dep__incl.map  Game_8h__dep__incl.md5  Game_8h__incl.map  Game_8h__incl.md5  Game_8h_source.html  Hero.cpp  Hero.h  HeroSVGRenderer.cpp  (+211 more)
dockerfiles/: Parsertest_Docker  Test_Docker
maps/: fancy_map.txt  map_1.txt  map_for_test.txt
renderer outputs/: hero_text_output.txt  observer_text_output.txt
report/: mosze_report.md  report.md
results_correct/: Robin_Tolvaj_Correct.txt  Robin_Tomcat_Correct.txt  Tolvaj_Robin_Correct.txt  Tolvaj_Tomcat_Correct.txt  Tomcat_Robin_Correct.txt  Tomcat_Tolvaj_Correct.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  (+67 more)
tests/: Blood_Raven.json  CMakeLists.txt  ParserTests.cpp  Tests.cpp  UnitTests.cpp  parseTests.cpp  parserTests.cpp  preparedgame.json  run_test.sh  test_input.txt
tests/Testfiles/: missing_curly.json  mixed_order.json  normal.json  oneline.json  whitespaces.json
(+12 files in other folders)
